--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Ananya Gandhi</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/style.css" type="text/css" rel="stylesheet">
 
     </head>
 
