--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" type="text/css" rel="stylesheet">
-        <link rel="icon" href="webicon.png" type="image/icon type">
+        <link rel="icon" href="webicon.png" type = "image/x-icon">
 
     </head>
 
