--- a/index.html
+++ b/index.html
@@ -225,26 +225,29 @@
 
             <p> Feel free to get in touch with me for any further inquiries! </p>
 
-            <a href="https://www.linkedin.com/in/ananya-gandhi/">
-                <img src = "images/linkedin.png" alt = "LinkedIn logo"
-                style="width: 30px; height:30px;">
-            </a>
+            <ul style="list-style-type:none; columns:3;">
+                <li>
+                    <a href="https://www.linkedin.com/in/ananya-gandhi/">
+                        <img src = "images/linkedin.png" alt = "LinkedIn logo"
+                        style="width: 30px; height:30px;">
+                    </a>
+                </li>
 
-		
-	    <br>
+                <li>
+                    <a href="https://github.com/ananyagandhi">
+                        <img src = "images/github.png" alt = "Github logo"
+                        style="width: 30px; height:30px;">
+                    </a>
+                </li>
 
+                <li>
+                    <a href="mailto:ananya.gandhi@columbia.edu">
+                        <img src = "images/mail.png" alt = "Mail logo"
+                        style="width: 30px; height:30px;">
+                    </a>
+                </li>
 
-            <a href="https://github.com/ananyagandhi">
-                <img src = "images/github.png" alt = "Github logo"
-                style="width: 30px; height:30px;">
-            </a>
-
-	    <br>
-
-            <a href="mailto:ananya.gandhi@columbia.edu">
-                <img src = "images/mail.png" alt = "Mail logo"
-                style="width: 30px; height:30px;">
-            </a>
+            </ul>
 
         </div>
 
