fixing icon layout

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
             <p> Feel free to get in touch with me for any further inquiries! </p>
 
-            <ul style="list-style-type:none; columns:3;">
+            <ul class = "contact-links" >
                 <li>
                     <a href="https://www.linkedin.com/in/ananya-gandhi/">
                         <img src = "images/linkedin.png" alt = "LinkedIn logo"
