--- a/index.html
+++ b/index.html
@@ -221,29 +221,29 @@
 
         <div id = "contact" class="contact">
             
-            <h1>CONTACT</h1>
+            <!--h1>CONTACT</h1>-->
 
-            <p> Feel free to get in touch with me for any further inquiries! </p>
+            <!--<p> Feel free to get in touch with me for any further inquiries! </p>-->
 
             <ul class = "contact-links" >
                 <li>
                     <a href="https://www.linkedin.com/in/ananya-gandhi/">
                         <img src = "images/linkedin.png" alt = "LinkedIn logo"
-                        style="width: 30px; height:30px;">
+                        style="width: 40px; height:40px;">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://github.com/ananyagandhi">
                         <img src = "images/github.png" alt = "Github logo"
-                        style="width: 30px; height:30px;">
+                        style="width: 40px; height:40px;">
                     </a>
                 </li>
 
                 <li>
                     <a href="mailto:ananya.gandhi@columbia.edu">
                         <img src = "images/mail.png" alt = "Mail logo"
-                        style="width: 30px; height:30px;">
+                        style="width: 40px; height:40px;">
                     </a>
                 </li>
 
