updated courses section

--- a/index.html
+++ b/index.html
@@ -64,12 +64,17 @@
                                 <li> Ordinary Differential Equations </li>
                                 <li> Partial Differential Equations </li>
                                 <li> Probability Theory </li>
+				<li> Stochastic Systems </li>
+				<li> Complex Analysis </li>
+				<li> Numerical Methods </li>
             
                                 <li> Introductory Python, Java, and C</li>
                                 <li> Data Structures </li>
-                                <li> Artificial Intelligence </li>
-                                <li> Computer Science Theory </li>
                                 <li> Discrete Mathematics </li>
+                                <li> Computer Science Theory </li>
+                                <li> Artificial Intelligence </li>
+				<li> Natural Language Processing </li>
+				<li> Analysis of Algorithms </li>
                             </ul>
                         
                         </p>
