--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p> 
                         <ul>
                             <li>Grading assignments for 340+ students </li>
-                            <li>Leading weekly Office Hours to help students per week with difficult concepts, homework problems, and exam preparation </li>
+                            <li>Leading weekly Office Hours to help students with difficult concepts, homework problems, and exam preparation </li>
                             <li>Concepts include regular languages, regular expressions, context free languages and grammars, finite automata, Turing Machines, and P vs. NP </li>
                         </ul>
                     </p>
